kubernetes/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: neppi-strapi-desarrollo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - qa.neppi.io
    secretName: tls-secret-neppidesarrollo
  rules:
  - host: qa.neppi.io
    http:
      paths:
        - path: /
          backend:
            serviceName: neppi-strapi-desarrollo-cluster-ip
            servicePort: 80
